[package]
name = "kyawthuite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "0.19" }
winit = "0.29"
env_logger = "0.11"
pollster = "0.3"
cfg-if = "1"
log = "0.4"
bytemuck = { version = "1.12", features = [ "derive" ] }

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
